# MICO

./: .gitignore  CHANGELOG.md  Gemfile  README.md  SUPPORT.md  _config.yml  environment.yaml  index.markdown  md5sums.md  requirements.txt  setup.cfg
.github/workflows/: codeql.yml
_layouts/: index.html
codalab-package/: README.md  competition.yaml  data.md  evaluation.md  overview.md  terms.md
codalab-package/utilities/: make_competition_bundle.sh
src/mico-competition/: __init__.py  challenge_datasets.py  mico.py
src/mico-competition/scoring/: __init__.py  metadata  score.py  score_html.py
starting-kit/: cifar10.ipynb  ddp.ipynb  purchase100.ipynb  requirements-starting-kit.txt  sst2.ipynb
training/: accountant.py  requirements-purchase100.txt  requirements-sst2.txt  train_cifar10.py  train_cifar10_ddp.sh  train_cifar10_hi.sh  train_cifar10_inf.sh  train_purchase100.py  train_purchase100_hi.sh  train_purchase100_inf.sh  train_purchase100_lo.sh  train_sst2.py  train_sst2_hi.sh  train_sst2_inf.sh  train_sst2_lo.sh
