[metadata]
    name        = mico-competition
    version     = 0.1.1
    description = MICO Competition utilities
    url         = https://github.com/microsoft/MICO
    license     = MIT License

[options]
package_dir = 
    mico_competition = src/mico-competition
    mico_competition.scoring = src/mico-competition/scoring
packages =
    mico_competition
    mico_competition.scoring
install_requires = 
    torch==1.8.1
    torchvision==0.9.1
    torchcsprng==0.2.1
    scikit-learn==1.1.3
    matplotlib==3.6.1
    pandas==1.5.1
    datasets==2.6.1
    transformers==4.30.0
